--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- 英雄部分 -->
     <section class="min-h-screen flex items-center pt-16 pb-12 bg-img-1 dark:bg-gray-800">
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row items-center gap-8">
@@ -92,7 +92,7 @@
                             <div class="tech-stack">
                                 <span class="tech-tag">使用語言</span>
                                 <span class="tech-tag">使用語言</span>
-                                <span class="tech-tag">使用語言ㄎ</span>
+                                <span class="tech-tag">使用語言</span>
                             </div>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                             <div class="tech-stack">
                                 <span class="tech-tag">使用語言</span>
                                 <span class="tech-tag">使用語言</span>
-                                <span class="tech-tag">使用語言ㄎ</span>
+                                <span class="tech-tag">使用語言</span>
                             </div>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                             <div class="tech-stack">
                                 <span class="tech-tag">使用語言</span>
                                 <span class="tech-tag">使用語言</span>
-                                <span class="tech-tag">使用語言ㄎ</span>
+                                <span class="tech-tag">使用語言</span>
                             </div>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                             <div class="tech-stack">
                                 <span class="tech-tag">使用語言</span>
                                 <span class="tech-tag">使用語言</span>
-                                <span class="tech-tag">使用語言ㄎ</span>
+                                <span class="tech-tag">使用語言</span>
                             </div>
                         </div>
                     </div>
