--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <title>Minato Baiyun</title>
     <link rel="icon" href="/assets/img/icon.ico" type="image/x-icon" />
     
+    <!--SEO設定-->
+    <meta name="title" content="湊白雲的個人網站">
+    <meta name="description" content="這是湊白雲的個人網站，湊白雲是一個程式開發者，幫人做過行銷企劃，也作過遊戲翻譯者，最近在嘗試當同人文作者">
+    <meta name="keywords" content="湊白雲,Minato Baiyun">
+    <meta name="copyright" content="Minato Baiyun's">
+    <meta name="author" content="Minato Baiyun"><!--https://alicezuber.github.io/alicezuber/-->
+    <meta name="distribution" content="zh-TW">
+    <meta name="revised" content="2024/11/02">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="image" content="assets/img/seo.png">
+    <!--OG設定-->
+    <meta property="og:url" content="https://alicezuber.github.io/alicezuber/"/>
+    <meta property="og:locale" content="zh_TW" />
+    <meta property="og:title" content="湊白雲的個人網站">
+    <meta property="og:description" content="這是湊白雲的個人網站，湊白雲是一個程式開發者，幫人做過行銷企劃，也作過遊戲翻譯者，最近在嘗試當同人文作者">
+    <meta property="og:image" content="assets/img/seo.png">
+    <!--X-->
+    <meta property="twitter:title" content="湊白雲的個人網站">
+    <meta property="twitter:image" content="assets/img/seo.png">
+    <meta property="twitter:description" content="這是湊白雲的個人網站，湊白雲是一個程式開發者，幫人做過行銷企劃，也作過遊戲翻譯者，最近在嘗試當同人文作者">
+    <meta property="twitter:card" content="assets/img/seo.png">
+    <meta property="twitter:site" content="Minato Baiyun's">
+
     <!-- CDN Resources -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.0.0/css/all.min.css" rel="stylesheet">
