建立黑暗模式

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </nav>
 
-    <!-- 英雄部分 -->
+    <!-- Main 部分 -->
     <section class="min-h-screen flex items-center pt-16 pb-12 bg-img-1 dark:bg-gray-800">
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row items-center gap-8">
@@ -71,20 +71,22 @@
                         <span id="typed-output" class="gradient-text"></span>
                     </h2>
                     <p class="text-gray-600 dark:text-gray-400 mb-6 text-lg">
-                        <span id="typed-output2" class=""></span>
+                        <span id="typed-output2" class=""></span><br>
+                        <a href="#" class="gradient-text animate__animated animate__fadeIn animate__delay-3s hover-gradient-text" data-lang="moreabout">了解更多</a>
                     </p>
 
+
                     <div class="flex gap-4">
-                        <a href="https://discordapp.com/users/632835000617926657" class="social-link discord">
+                        <a href="https://discordapp.com/users/632835000617926657" class="social-link discord animate__animated animate__rotateIn ">
                             <i class="fab fa-discord"></i>
                         </a>
-                        <a href="https://twitter.com/Captain_Baiyun" class="social-link twitter">
+                        <a href="https://twitter.com/Captain_Baiyun" class="social-link twitter animate__animated animate__rotateIn animate__delay-1s">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="https://github.com/alicezuber" class="social-link github">
+                        <a href="https://github.com/alicezuber" class="social-link github animate__animated animate__rotateIn animate__delay-2s">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="mailto:satenruiko316@gmail.com" class="social-link gmail">
+                        <a href="mailto:satenruiko316@gmail.com" class="social-link gmail animate__animated animate__rotateIn animate__delay-3s">
                             <i class="fas fa-envelope"></i>
                         </a>
                     </div>
@@ -94,10 +96,10 @@
     </section>
 
     <!-- Code Examples Section -->
-    <section class="py-12 bg-gray-50 dark:bg-gray-800">
+    <section class="py-12">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold mb-8 text-center gradient-text">Hello, World!</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-6 gap-4">
                 <!-- Code cards will be dynamically inserted here -->
             </div>
         </div>
@@ -163,7 +165,7 @@
     </section>
 
     <!-- Motto Section -->
-    <section class="py-12 bg-gray-50 dark:bg-gray-800">
+    <section class="py-12">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold mb-8 text-center gradient-text" data-lang="title2">My Motto</h2>
             <div class="flex flex-col md:flex-row items-center gap-8">
@@ -185,30 +187,36 @@
 
 
     <!-- Footer -->
-    <footer class="bg-gray-900 text-white py-8">
+    <footer class="bg-gray-900 text-white py-8 mb-w">
         <div class="container mx-auto px-4">
-            <div class="flex flex-col md:flex-row justify-between items-center">
-                <div class="mb-4 md:mb-0">
-                    <p class="gradient-text text-lg font-bold">Minato Baiyun</p>
-                    <p class="text-sm text-gray-400">© 2024 All rights reserved</p>
+            <div class="flex-col md:flex-row justify-between items-center">
+                <div class="mb-4 md:mb-0 mb-w">
                     <p class="gradient-text text-lg font-bold">Disclaimer</p>
+                    <br>
                     <p class="text-sm text-gray-400" data-lang="disclaimer">© 2024 All rights reserved</p>
+                    <br>
+                    <div class="mb-w">
+                        <p class="gradient-text text-lg font-bold">Minato Baiyun</p>
+                        <p class="text-sm text-gray-400">© 2024 All rights reserved</p>
+                        <br>
+                        <div class="gap-4">
+                            <a href="https://discordapp.com/users/632835000617926657" class="hover:text-blue-400 transition-colors">
+                                <i class="fab fa-discord text-2xl"></i>
+                            </a>
+                            <a href="https://twitter.com/Captain_Baiyun" class="hover:text-blue-400 transition-colors">
+                                <i class="fab fa-twitter text-2xl"></i>
+                            </a>
+                            <a href="https://github.com/alicezuber" class="hover:text-blue-400 transition-colors">
+                                <i class="fab fa-github text-2xl"></i>
+                            </a>
+                            <a href="mailto:satenruiko316@gmail.com" class="hover:text-blue-400 transition-colors">
+                                <i class="fas fa-envelope text-2xl"></i>
+                            </a>
+                        </div>
+                    </div>
                 </div>
                 <br>
-                <div class="flex gap-4">
-                    <a href="https://discordapp.com/users/632835000617926657" class="hover:text-blue-400 transition-colors">
-                        <i class="fab fa-discord text-2xl"></i>
-                    </a>
-                    <a href="https://twitter.com/Captain_Baiyun" class="hover:text-blue-400 transition-colors">
-                        <i class="fab fa-twitter text-2xl"></i>
-                    </a>
-                    <a href="https://github.com/alicezuber" class="hover:text-blue-400 transition-colors">
-                        <i class="fab fa-github text-2xl"></i>
-                    </a>
-                    <a href="mailto:satenruiko316@gmail.com" class="hover:text-blue-400 transition-colors">
-                        <i class="fas fa-envelope text-2xl"></i>
-                    </a>
-                </div>
+
             </div>
         </div>
     </footer>
