更新手機板型

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
     <!-- Main 部分 -->
     <section class="min-h-screen flex items-center pt-16 pb-12 bg-img-1 dark:bg-gray-800">
         <div class="container mx-auto px-4">
-            <div class="flex flex-col md:flex-row items-center gap-8">
+            <div class="flex flex-col md:flex-row items-center gap-8 ph-1">
                 <div class="flex-1 animate__animated animate__fadeIn">
-                    <h2 class="text-4xl font-bold mb-4">
-                        <span id="typed-output" class="gradient-text"></span>
+                    <h2 class="text-4xl font-bold mb-4 ">
+                        <span id="typed-output" class="gradient-text "></span>
                     </h2>
                     <p class="text-gray-600 dark:text-gray-400 mb-6 text-lg">
                         <span id="typed-output2" class=""></span><br>
-                        <a href="#" class="gradient-text animate__animated animate__fadeIn animate__delay-3s hover-gradient-text" data-lang="moreabout">了解更多</a>
+                        <a href="#" class="gradient-text animate__animated animate__fadeIn animate__delay-3s hover-gradient-text " data-lang="moreabout">了解更多</a>
                     </p>
 
 
@@ -91,6 +91,7 @@
                         </a>
                     </div>
                 </div>
+                <br>
             </div>
         </div>
     </section>
@@ -168,7 +169,7 @@
     <section class="py-12">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold mb-8 text-center gradient-text" data-lang="title2">My Motto</h2>
-            <div class="flex flex-col md:flex-row items-center gap-8">
+            <div class="flex flex-col md:flex-row items-center gap-8 ">
                 <div class="flex-1">
                     <img src="assets/img/Vikala.png" alt="Motto Image" class="rounded-lg shadow-lg">
                 </div>
