--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
                         <a href="#" class="gradient-text animate__animated animate__fadeIn animate__delay-3s hover-gradient-text " data-lang="moreabout">了解更多</a>
                     </p>
 
-
                     <div class="flex gap-4">
                         <a target="_blank" href="https://discordapp.com/users/632835000617926657 " class="social-link discord animate__animated animate__rotateIn ">
                             <i class="fa-brands fa-discord"></i>
@@ -101,51 +100,49 @@
         </div>
     </section>
 
-
-
     <!-- 技術類技能 -->
     <section class="py-12">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold mb-8 text-center gradient-text">程式語言與工具</h2>
+            <h2 class="text-3xl font-bold mb-8 text-center gradient-text" data-i18n="programmingTitle">程式語言與工具</h2>
             <div class="skill-grid">
                 <div class="skill-card">
-                    <h3>C</h3>
-                    <p>基礎，但不常寫</p>
+                    <h3 data-i18n-programming="c"></h3>
+                    <p data-i18n-programming-desc="c"></p>
                     <div class="progress-bar"><span style="width: 65%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>C++</h3>
-                    <p>基礎，但不常寫</p>
+                    <h3 data-i18n-programming="cpp"></h3>
+                    <p data-i18n-programming-desc="cpp"></p>
                     <div class="progress-bar"><span style="width: 60%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>C#  (學習中)</h3>
-                    <p>為了unity學習</p>
+                    <h3 data-i18n-programming="csharp"></h3>
+                    <p data-i18n-programming-desc="csharp"></p>
                     <div class="progress-bar"><span style="width: 40%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>HTML / CSS</h3>
-                    <p>本頁面，就算作品吧?</p>
+                    <h3 data-i18n-programming="htmlcss"></h3>
+                    <p data-i18n-programming-desc="htmlcss"></p>
                     <div class="progress-bar"><span style="width: 85%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>PHP</h3>
-                    <p>建立過後台管理系統</p>
+                    <h3 data-i18n-programming="php"></h3>
+                    <p data-i18n-programming-desc="php"></p>
                     <div class="progress-bar"><span style="width: 70%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>Python</h3>
-                    <p>多項程式皆使用此撰寫</p>
+                    <h3 data-i18n-programming="python"></h3>
+                    <p data-i18n-programming-desc="python"></p>
                     <div class="progress-bar"><span style="width: 85%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>JavaScript</h3>
-                    <p>本頁面，就算作品吧?</p>
+                    <h3 data-i18n-programming="javascript"></h3>
+                    <p data-i18n-programming-desc="javascript"></p>
                     <div class="progress-bar"><span style="width: 80%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>Visual Studio Code</h3>
-                    <p>一般習慣使用vscode來寫程式</p>
+                    <h3 data-i18n-programming="vscode"></h3>
+                    <p data-i18n-programming-desc="vscode"></p>
                     <div class="progress-bar"><span style="width: 90%;"></span></div>
                 </div>
             </div>
@@ -155,36 +152,36 @@
     <!-- 設計類技能 -->
     <section class="py-12">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold mb-8 text-center gradient-text">設計與視覺工具</h2>
+            <h2 class="text-3xl font-bold mb-8 text-center gradient-text" data-i18n="designTitle">設計與視覺工具</h2>
             <div class="skill-grid">
                 <div class="skill-card">
-                    <h3>Adobe After Effects</h3>
-                    <p>曾經做過一隻幹片(作業)是我和同學拿光劍(雨傘)互打</p>
+                    <h3 data-i18n-design="aftereffects"></h3>
+                    <p data-i18n-design-desc="aftereffects"></p>
                     <div class="progress-bar"><span style="width: 70%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>Adobe Photoshop</h3>
-                    <p>某次參加活動，學會使用基礎，進階程度不高</p>
+                    <h3 data-i18n-design="photoshop"></h3>
+                    <p data-i18n-design-desc="photoshop"></p>
                     <div class="progress-bar"><span style="width: 60%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>Adobe Premiere</h3>
-                    <p>為了Ae學習的，不是很熟練</p>
+                    <h3 data-i18n-design="premiere"></h3>
+                    <p data-i18n-design-desc="premiere"></p>
                     <div class="progress-bar"><span style="width: 65%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>DaVinci Resolve</h3>
-                    <p>因為有免費版，當初就有認真學過</p>
+                    <h3 data-i18n-design="davinci"></h3>
+                    <p data-i18n-design-desc="davinci"></p>
                     <div class="progress-bar"><span style="width: 70%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>Audacity</h3>
-                    <p>偶爾修修朋友的音檔</p>
+                    <h3 data-i18n-design="audacity"></h3>
+                    <p data-i18n-design-desc="audacity"></p>
                     <div class="progress-bar"><span style="width: 70%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>Live2D Cubism（學習中）</h3>
-                    <p>也想建模</p>
+                    <h3 data-i18n-design="live2d"></h3>
+                    <p data-i18n-design-desc="live2d"></p>
                     <div class="progress-bar"><span style="width: 20%;"></span></div>
                 </div>
             </div>
@@ -194,41 +191,41 @@
     <!-- 語言與創作 -->
     <section class="py-12">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold mb-8 text-center gradient-text">語言能力與創作</h2>
+            <h2 class="text-3xl font-bold mb-8 text-center gradient-text" data-i18n="skillsTitle">語言能力與創作</h2>
             <div class="skill-grid">
                 <div class="skill-card">
-                    <h3>日文</h3>
-                    <p>聽讀略懂，寫作與口語無法</p>
+                    <h3 data-i18n-skill="japanese"></h3>
+                    <p data-i18n-skill-desc="japanese"></p>
                     <div class="progress-bar"><span style="width: 40%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>英文</h3>
-                    <p>聽讀可以，寫作與口語略懂</p>
+                    <h3 data-i18n-skill="english"></h3>
+                    <p data-i18n-skill-desc="english"></p>
                     <div class="progress-bar"><span style="width: 60%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>中文</h3>
-                    <p>聽讀、寫作與口語皆精通</p>
+                    <h3 data-i18n-skill="chinese"></h3>
+                    <p data-i18n-skill-desc="chinese"></p>
                     <div class="progress-bar"><span style="width: 95%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>同人文創作</h3>
-                    <p>目前沒有公開</p>
+                    <h3 data-i18n-skill="doujin"></h3>
+                    <p data-i18n-skill-desc="doujin"></p>
                     <div class="progress-bar"><span style="width: 80%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>一般創作</h3>
-                    <p>都是寫給朋友的，有規劃寫公開的</p>
+                    <h3 data-i18n-skill="general"></h3>
+                    <p data-i18n-skill-desc="general"></p>
                     <div class="progress-bar"><span style="width: 80%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>遊戲翻譯與模組開發</h3>
-                    <p>比較常翻譯麥塊</p>
+                    <h3 data-i18n-skill="gameTranslation"></h3>
+                    <p data-i18n-skill-desc="gameTranslation"></p>
                     <div class="progress-bar"><span style="width: 70%;"></span></div>
                 </div>
                 <div class="skill-card">
-                    <h3>行銷與文案撰寫</h3>
-                    <p>略懂</p>
+                    <h3 data-i18n-skill="marketing"></h3>
+                    <p data-i18n-skill-desc="marketing"></p>
                     <div class="progress-bar"><span style="width: 55%;"></span></div>
                 </div>
             </div>
@@ -241,51 +238,50 @@
             <h2 class="text-3xl font-bold mb-8 text-center gradient-text" data-lang="title1">Portfolio</h2>
             <div class="swiper project-swiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
+                    <div class="swiper-slide" data-project="project1">
                         <div class="project-card">
-                            <h3 class="text-xl font-bold mb-2 gradient-text1">測試中1</h3>
-                            <p class="text-gray-600 dark:text-gray-400">細節放置</p>
+                            <h3 class="text-xl font-bold mb-2 gradient-text1" data-i18n-portfolio="title"></h3>
+                            <p class="text-gray-600 dark:text-gray-400" data-i18n-portfolio="description"></p>
                             <div class="tech-stack">
-                                <span class="tech-tag">使用語言</span>
-                                <span class="tech-tag">使用語言</span>
-                                <span class="tech-tag">使用語言</span>
+                                <span class="tech-tag" data-i18n-portfolio="tech0"></span>
+                                <span class="tech-tag" data-i18n-portfolio="tech1"></span>
+                                <span class="tech-tag" data-i18n-portfolio="tech2"></span>
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide" data-project="project2">
                         <div class="project-card">
-                            <h3 class="text-xl font-bold mb-2 gradient-text1">測試中2</h3>
-                            <p class="text-gray-600 dark:text-gray-400">細節放置</p>
+                            <h3 class="text-xl font-bold mb-2 gradient-text1" data-i18n-portfolio="title"></h3>
+                            <p class="text-gray-600 dark:text-gray-400" data-i18n-portfolio="description"></p>
                             <div class="tech-stack">
-                                <span class="tech-tag">使用語言</span>
-                                <span class="tech-tag">使用語言</span>
-                                <span class="tech-tag">使用語言</span>
+                                <span class="tech-tag" data-i18n-portfolio="tech0"></span>
+                                <span class="tech-tag" data-i18n-portfolio="tech1"></span>
+                                <span class="tech-tag" data-i18n-portfolio="tech2"></span>
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide" data-project="project3">
                         <div class="project-card">
-                            <h3 class="text-xl font-bold mb-2 gradient-text1">測試中3</h3>
-                            <p class="text-gray-600 dark:text-gray-400">細節放置</p>
+                            <h3 class="text-xl font-bold mb-2 gradient-text1" data-i18n-portfolio="title"></h3>
+                            <p class="text-gray-600 dark:text-gray-400" data-i18n-portfolio="description"></p>
                             <div class="tech-stack">
-                                <span class="tech-tag">使用語言</span>
-                                <span class="tech-tag">使用語言</span>
-                                <span class="tech-tag">使用語言</span>
+                                <span class="tech-tag" data-i18n-portfolio="tech0"></span>
+                                <span class="tech-tag" data-i18n-portfolio="tech1"></span>
+                                <span class="tech-tag" data-i18n-portfolio="tech2"></span>
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-slide">
+                    <div class="swiper-slide" data-project="project4">
                         <div class="project-card">
-                            <h3 class="text-xl font-bold mb-2 gradient-text">測試中4</h3>
-                            <p class="text-gray-600 dark:text-gray-400">細節放置</p>
+                            <h3 class="text-xl font-bold mb-2 gradient-text" data-i18n-portfolio="title"></h3>
+                            <p class="text-gray-600 dark:text-gray-400" data-i18n-portfolio="description"></p>
                             <div class="tech-stack">
-                                <span class="tech-tag">使用語言</span>
-                                <span class="tech-tag">使用語言</span>
-                                <span class="tech-tag">使用語言</span>
+                                <span class="tech-tag" data-i18n-portfolio="tech0"></span>
+                                <span class="tech-tag" data-i18n-portfolio="tech1"></span>
+                                <span class="tech-tag" data-i18n-portfolio="tech2"></span>
                             </div>
                         </div>
                     </div>
-                    <!-- Add more project slides as needed -->
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-next"></div>
@@ -331,11 +327,11 @@
                 <div class="mb-4 md:mb-0 mb-w">
                     <p class="gradient-text text-lg font-bold">Disclaimer</p>
                     <br>
-                    <p class="text-sm text-gray-400" data-lang="disclaimer">© 2024 All rights reserved</p>
+                    <p class="text-sm text-gray-400" data-lang="disclaimer"> 2024 All rights reserved</p>
                     <br>
                     <div class="mb-w">
                         <p class="gradient-text text-lg font-bold">Minato Baiyun</p>
-                        <p class="text-sm text-gray-400">© 2024 All rights reserved</p>
+                        <p class="text-sm text-gray-400"> 2024 All rights reserved</p>
                         <br>
                         <div class="gap-4">
                             <a href="https://discordapp.com/users/632835000617926657" class="hover:text-blue-400 transition-colors">
