增加近況區塊

--- a/index.html
+++ b/index.html
@@ -100,6 +100,42 @@
         </div>
     </section>
 
+<!-- 近況 -->
+<section class="py-12 bg-gray-50 dark:bg-gray-800">
+    <div class="container mx-auto px-4">
+        <h2 class="text-3xl font-bold mb-8 text-center gradient-text" data-i18n-updates="title">近況</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <!-- <div class="bg-white dark:bg-gray-700 rounded-lg shadow-md p-6 transition-transform hover:scale-105">
+                <h3 class="text-xl font-semibold mb-3 text-gray-800 dark:text-white" data-i18n-updates="currentStatus"></h3>
+                <p class="text-gray-600 dark:text-gray-300" data-i18n-updates="currentStatus"></p>
+            </div>
+            <div class="bg-white dark:bg-gray-700 rounded-lg shadow-md p-6 transition-transform hover:scale-105">
+                <h3 class="text-xl font-semibold mb-3 text-gray-800 dark:text-white" data-i18n-updates="learning"></h3>
+                <p class="text-gray-600 dark:text-gray-300" data-i18n-updates="learning"></p>
+            </div>
+            <div class="bg-white dark:bg-gray-700 rounded-lg shadow-md p-6 transition-transform hover:scale-105">
+                <h3 class="text-xl font-semibold mb-3 text-gray-800 dark:text-white" data-i18n-updates="futurePlan"></h3>
+                <p class="text-gray-600 dark:text-gray-300" data-i18n-updates="futurePlan"></p>
+            </div> -->
+            <!-- 近況項目 4 - 團隊招募 -->
+            <div class="bg-white dark:bg-gray-700 rounded-lg shadow-md p-6 transition-transform hover:scale-105 lg:col-span-3">
+                <h3 class="text-xl font-semibold mb-3 text-gray-800 dark:text-white" data-i18n-updates="teamBuilding"></h3>
+                <p class="text-gray-600 dark:text-gray-300" data-i18n-updates="teamBuilding"></p>
+                <div class="mt-4 flex justify-center gap-4">
+                    <a href="https://discordapp.com/users/632835000617926657" class="inline-flex items-center px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white rounded-lg transition-colors">
+                        <i class="fab fa-discord mr-2"></i>
+                        Add me on Discord
+                    </a>
+                    <a href="mailto:satenruiko316@gmail.com" class="inline-flex items-center px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white rounded-lg transition-colors">
+                        <i class="fas fa-envelope mr-2"></i>
+                        Email me
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
     <!-- 技術類技能 -->
     <section class="py-12">
         <div class="container mx-auto px-4">
@@ -294,7 +330,7 @@
     <section class="py-12">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold mb-8 text-center gradient-text">Hello, World!</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-6 gap-4">
+            <div class="code-examples-section">
                 <!-- Code cards will be dynamically inserted here -->
             </div>
         </div>
