--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
     </section>
 
 <!-- 近況 -->
-<section class="py-12 bg-gray-50 dark:bg-gray-800">
+<section class="py-12">
     <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold mb-8 text-center gradient-text" data-i18n-updates="title">近況</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <div class="skill-card grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- <div class="bg-white dark:bg-gray-700 rounded-lg shadow-md p-6 transition-transform hover:scale-105">
                 <h3 class="text-xl font-semibold mb-3 text-gray-800 dark:text-white" data-i18n-updates="currentStatus"></h3>
                 <p class="text-gray-600 dark:text-gray-300" data-i18n-updates="currentStatus"></p>
@@ -118,7 +118,7 @@
                 <p class="text-gray-600 dark:text-gray-300" data-i18n-updates="futurePlan"></p>
             </div> -->
             <!-- 近況項目 4 - 團隊招募 -->
-            <div class="bg-white dark:bg-gray-700 rounded-lg shadow-md p-6 transition-transform hover:scale-105 lg:col-span-3">
+            <div class="rounded-lg shadow-md p-6 transition-transform hover:scale-105 lg:col-span-3">
                 <h3 class="text-xl font-semibold mb-3 text-gray-800 dark:text-white" data-i18n-updates="teamBuilding"></h3>
                 <p class="text-gray-600 dark:text-gray-300" data-i18n-updates="teamBuilding"></p>
                 <div class="mt-4 flex justify-center gap-4">
