--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <!-- <a target="_blank" href="https://www.pixiv.net/users/74288832" class="social-link animate__animated animate__rotateIn animate__delay-3s">
                             <i class="fa-brands fa-pixiv"></i>
                         </a> -->
-                        <a href="mailto:satenruiko316@gmail.com" class="social-link gmail animate__animated animate__rotateIn animate__delay-3s">
+                        <a href="mailto:minato.baiyun@gmail.com" class="social-link gmail animate__animated animate__rotateIn animate__delay-3s">
                             <i class="fa-solid fa-envelope"></i>
                         </a>
                     </div>
@@ -126,7 +126,7 @@
                         <i class="fab fa-discord mr-2"></i>
                         Add me on Discord
                     </a>
-                    <a href="mailto:satenruiko316@gmail.com" class="inline-flex items-center px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white rounded-lg transition-colors">
+                    <a href="mailto:minato.baiyun@gmail.com" class="inline-flex items-center px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white rounded-lg transition-colors">
                         <i class="fas fa-envelope mr-2"></i>
                         Email me
                     </a>
@@ -379,7 +379,7 @@
                             <a href="https://github.com/alicezuber" class="hover:text-blue-400 transition-colors">
                                 <i class="fab fa-github text-2xl"></i>
                             </a>
-                            <a href="mailto:satenruiko316@gmail.com" class="hover:text-blue-400 transition-colors">
+                            <a href="mailto:minato.baiyun@gmail.com" class="hover:text-blue-400 transition-colors">
                                 <i class="fas fa-envelope text-2xl"></i>
                             </a>
                         </div>
