Add "What am I Doing Lately" and "About Me" sections to index.html with translations

--- a/index.html
+++ b/index.html
@@ -136,6 +136,19 @@
     </div>
 </section>
 
+    <!-- What am I Doing Lately -->
+    <section class="py-12">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold mb-8 text-center gradient-text" data-i18n="whatAmIDoingLatelyTitle">What am I Doing Lately</h2>
+            <div class="text-center">
+                <p class="text-lg mb-4" data-i18n="whatAmIDoingLatelyDesc1">I am currently developing a <strong>personal microservice platform</strong> built around <strong>ZITADEL-based SSO</strong> for identity and access management.</p>
+                <p class="text-lg mb-4" data-i18n="whatAmIDoingLatelyDesc2">The system leverages <strong>Web Push (PWA-style notifications)</strong> to deliver <strong>real-time VPS status and system events</strong> directly to my iPhone with minimal latency.</p>
+                <p class="text-lg mb-4" data-i18n="whatAmIDoingLatelyDesc3">In parallel, I am integrating a <strong>Discord bot with an Ollama-powered LLM agent</strong>, allowing me to <strong>query VPS status and infrastructure information through natural language conversations</strong>.</p>
+                <p class="text-lg" data-i18n="whatAmIDoingLatelyDesc4">This project focuses on <strong>infrastructure observability, secure access control, and AI-assisted system interaction</strong>.</p>
+            </div>
+        </div>
+    </section>
+
     <!-- 技術類技能 -->
     <section class="py-12">
         <div class="container mx-auto px-4">
@@ -185,6 +198,18 @@
         </div>
     </section>
 
+    <!-- Tech Stack Snapshot -->
+    <section class="py-12">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold mb-8 text-center gradient-text">Tech Stack Snapshot</h2>
+            <div class="text-center">
+                <img src="https://skillicons.dev/icons?i=python,fastapi,flask,redis,mysql,sqlite,postman&theme=light" alt="Backend Stack" />
+                <br><br>
+                <img src="https://skillicons.dev/icons?i=vue,js,ts,nodejs,html,css,nginx&theme=light" alt="Frontend Stack" />
+            </div>
+        </div>
+    </section>
+
     <!-- 設計類技能 -->
     <section class="py-12">
         <div class="container mx-auto px-4">
@@ -220,6 +245,16 @@
                     <p data-i18n-design-desc="live2d"></p>
                     <div class="progress-bar"><span style="width: 20%;"></span></div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Tools & Environment -->
+    <section class="py-12">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold mb-8 text-center gradient-text">Tools & Environment</h2>
+            <div class="text-center">
+                <img src="https://skillicons.dev/icons?i=windows,linux,docker,git,github,vscode,postman&theme=light" alt="Tools" />
             </div>
         </div>
     </section>
@@ -264,6 +299,16 @@
                     <p data-i18n-skill-desc="marketing"></p>
                     <div class="progress-bar"><span style="width: 55%;"></span></div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Client & Game Development -->
+    <section class="py-12">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold mb-8 text-center gradient-text">Client & Game Development</h2>
+            <div class="text-center">
+                <img src="https://skillicons.dev/icons?i=godot,unity,tauri,electron,cs,cpp,js,ts&theme=light" alt="Game Dev Stack" />
             </div>
         </div>
     </section>
@@ -326,6 +371,23 @@
         </div>
     </section>
 
+    <!-- About Me -->
+    <section class="py-12">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold mb-8 text-center gradient-text" data-i18n="aboutMeTitle">About Me</h2>
+            <div class="text-center">
+                <p class="text-lg mb-4" data-i18n="aboutMeZh1">我來自 <a href="https://zh.wikipedia.org/zh-tw/%E8%87%BA%E7%81%A3">台灣</a>，目前主修 <strong>資訊管理（Information Management）</strong>，專注於 <strong>Infrastructure / Backend / Security</strong> 相關領域。</p>
+                <p class="text-lg mb-4" data-i18n="aboutMeZh2">在技術之外，我長期參與 <strong>遊戲、MOD 與插件的在地化與翻譯工作</strong>，培養了良好的 <strong>跨語言溝通能力、細節敏感度，以及對使用者體驗的重視</strong>。</p>
+                <br>
+                <p class="text-lg mb-4" data-i18n="aboutMeEn1">I am from <a href="https://en.wikipedia.org/wiki/Taiwan">Taiwan</a>. I major in <strong>Information Management</strong>, with a strong focus on <strong>Infrastructure, backend systems, and security-oriented development</strong>.</p>
+                <p class="text-lg mb-4" data-i18n="aboutMeEn2">In addition to engineering, I actively contribute to <strong>game, mod, and plugin localization projects</strong>, which strengthens my communication skills and attention to detail.</p>
+                <br>
+                <p class="text-lg mb-4" data-i18n="aboutMeJa1">私は <a href="https://ja.wikipedia.org/wiki/%E5%8F%B0%E6%B9%BE">台湾</a> 出身です。 <strong>情報管理（Information Management）</strong> を専攻し、 <strong>インフラ・バックエンド・セキュリティ分野</strong> に注力しています。</p>
+                <p class="text-lg" data-i18n="aboutMeJa2">また、ゲーム・MOD・プラグインの翻訳・ローカライズにも携わっており、技術とユーザー体験の両立を大切にしています。</p>
+            </div>
+        </div>
+    </section>
+
     <!-- Code Examples Section -->
     <section class="py-12">
         <div class="container mx-auto px-4">
@@ -339,17 +401,17 @@
     <!-- Motto Section -->
     <section class="py-12">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold mb-8 text-center gradient-text" data-lang="title2">My Motto</h2>
+            <h2 class="text-3xl font-bold mb-8 text-center gradient-text" data-i18n="mottoTitle">My Motto</h2>
             <div class="flex flex-col md:flex-row items-center gap-8 ">
                 <div class="flex-1">
                     <img src="assets/img/Vikala.png" alt="Motto Image" class="rounded-lg shadow-lg">
                 </div>
                 <div class="flex-1">
                     <div class="motto-text">
-                        <p class="text-lg mb-4 jp-text">どんな人でも手を繋げばもう友達さ！</p>
-                        <p class="text-lg mb-4">No matter who you are, if we shake hands You're already my friend!</p>
-                        <p class="text-lg">無論是什麼樣的人，只要牽起手來就是朋友！</p>
-                        <p class="text-sm text-gray-600 dark:text-gray-400 mt-4 gradient-text font-bold" data-lang="vikala">--- ビカラ(十二神将)</p>
+                        <p class="text-lg mb-4 jp-text" data-i18n="mottoJp">どんな人でも手を繋げばもう友達さ！</p>
+                        <p class="text-lg mb-4" data-i18n="mottoEn">No matter who you are, if we shake hands You're already my friend!</p>
+                        <p class="text-lg" data-i18n="mottoZh">無論是什麼樣的人，只要牽起手來就是朋友！</p>
+                        <p class="text-sm text-gray-600 dark:text-gray-400 mt-4 gradient-text font-bold" data-i18n="mottoCredit">--- ビカラ(十二神将)</p>
                     </div>
                 </div>
             </div>
