創建新個人頁面

--- a/index.html
+++ b/index.html
@@ -486,15 +486,10 @@
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold mb-8 text-center gradient-text" data-i18n="mottoTitle">My Motto</h2>
             <div class="flex flex-col md:flex-row items-center gap-8 ">
-                <div class="flex-1">
-                    <img src="assets/img/Vikala.png" alt="Motto Image" class="rounded-lg shadow-lg">
-                </div>
-                <div class="flex-1">
+                <div class="flex-1 text-center">
                     <div class="motto-text">
-                        <p class="text-lg mb-4 jp-text text-gray-800 dark:text-gray-200" data-i18n="mottoJp">どんな人でも手を繋げばもう友達さ！</p>
-                        <p class="text-lg mb-4 text-gray-800 dark:text-gray-200" data-i18n="mottoEn">No matter who you are, if we shake hands You're already my friend!</p>
-                        <p class="text-lg text-gray-800 dark:text-gray-200" data-i18n="mottoZh">無論是什麼樣的人，只要牽起手來就是朋友！</p>
-                        <p class="text-sm text-gray-600 dark:text-gray-400 mt-4 gradient-text font-bold" data-i18n="mottoCredit">--- ビカラ(十二神将)</p>
+                        <p class="text-2xl mb-4 italic text-gray-800 dark:text-gray-200" data-i18n="mottoQuote">"Any sufficiently advanced technology is indistinguishable from magic."</p>
+                        <p class="text-lg text-gray-600 dark:text-gray-400 font-bold" data-i18n="mottoCredit">--- Arthur C. Clarke</p>
                     </div>
                 </div>
             </div>
